# hay

./: .gitignore  AUTHORS  CMakeLists.txt  compile_commands.json  cpuinfo.cc  cpuinfo.h  device.cc  device.h  device_test.cc  hay.h  path.h  path_arm_neon.h  path_base.h  path_uint64.h  path_x86_avx2.h  path_x86_avx512.h  simd.h  simd_arm.h  simd_arm_neon.h  simd_base.h  simd_test.cc  simd_u32_u64.h  simd_u64.h  simd_uint64.h  simd_x86.h  simd_x86_avx512.h  test.cc  test.h  testlib.cc  testlib.h  vector.h  vector_test.cc
cmake/: bazel_like_rules.cmake  platform.cmake
